scss: Update design of blockquote and fix alignement of end quote bug on mobile

--- a/scss/modules/blockquote.scss
+++ b/scss/modules/blockquote.scss
@@ -7,18 +7,17 @@
 .blockquote:before {
 	color: #ccc;
 	content: open-quote;
-	font-size: 4em;
+	font-size: 2em;
 	line-height: 0.1em;
-	vertical-align: -0.4em;
 }
 
 .blockquote:after {
 	color: #ccc;
 	content: close-quote;
-	font-size: 4em;
+	font-size: 2em;
 	line-height: 0.1em;
 	margin-right: 0.25em;
-	vertical-align: -0.4em;
+	vertical-align: -0.2em;
 }
 
 .blockquote p {
